--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <fragment
-            android:id="@+id/loginFragment"
-            android:name="buu.informatics.s59160129.loginandparking.LoginFragment"
+            android:id="@+id/myNavHostFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:navGraph="@navigation/navigation"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            app:defaultNavHost="true" />
     </LinearLayout>
 
 </layout>
