--- a/app/src/main/res/layout/fragment_carpark.xml
+++ b/app/src/main/res/layout/fragment_carpark.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="buu.informatics.s59160129.loginandparking.CarparkFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -11,29 +12,27 @@
         <TextView
             android:id="@+id/status_1"
             style="@style/status"
-            android:layout_marginTop="16dp"
             android:fontFamily="@font/roboto"
             android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/btnDelete"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/status_2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.120000005" />
+            app:layout_constraintVertical_bias="0.110000014" />
 
         <TextView
             android:id="@+id/status_2"
             style="@style/status"
             android:fontFamily="@font/roboto"
             app:layout_constraintBottom_toBottomOf="@+id/status_1"
-            app:layout_constraintEnd_toStartOf="@+id/status-3"
+            app:layout_constraintEnd_toStartOf="@+id/status_3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/status_1"
             app:layout_constraintTop_toTopOf="@+id/status_1" />
 
         <TextView
-            android:id="@+id/status-3"
+            android:id="@+id/status_3"
             style="@style/status"
             android:fontFamily="@font/roboto"
             app:layout_constraintBottom_toBottomOf="@+id/status_2"
@@ -109,5 +108,6 @@
             app:layout_constraintStart_toEndOf="@+id/btnDelete"
             app:layout_constraintTop_toTopOf="@+id/btnDelete"
             app:layout_constraintVertical_bias="0.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
