--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="buu.informatics.s59160129.loginandparking.LoginFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/FragmentLogin"
         android:layout_width="match_parent"
@@ -9,11 +11,11 @@
         android:background="@drawable/bg">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnLogin"
             android:layout_width="@dimen/box_text_login_w"
             android:layout_height="@dimen/box_text_login"
             android:layout_marginBottom="92dp"
-            android:text="Button"
+            android:text="LOGIN"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView3"
             app:layout_constraintHorizontal_bias="0.517"
