--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="buu.informatics.s59160129.loginandparking.InfoFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/infoFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg">
@@ -21,14 +23,16 @@
             app:layout_constraintVertical_bias="0.19999999" />
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_width="371dp"
+            android:layout_height="213dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/ss"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars[13]" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.19999999" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
