--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,47 +14,61 @@
             android:id="@+id/btnLogin"
             android:layout_width="@dimen/box_text_login_w"
             android:layout_height="@dimen/box_text_login"
-            android:layout_marginBottom="92dp"
+            android:layout_marginTop="28dp"
             android:text="LOGIN"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/imageView3"
-            app:layout_constraintHorizontal_bias="0.517"
-            app:layout_constraintStart_toStartOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/user_text2" />
+            app:layout_constraintEnd_toEndOf="@+id/pass_text2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/pass_text2"
+            app:layout_constraintTop_toBottomOf="@+id/pass_text2" />
 
         <EditText
             android:id="@+id/user_text2"
             android:layout_width="@dimen/box_text_login_w"
             android:layout_height="@dimen/box_text_login"
+            android:layout_marginTop="32dp"
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="@+id/pass_text2"
-            app:layout_constraintStart_toStartOf="@+id/pass_text2"
-            app:layout_constraintTop_toBottomOf="@+id/pass_text2" />
+            app:layout_constraintEnd_toEndOf="@+id/imageView3"
+            app:layout_constraintStart_toStartOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
         <EditText
             android:id="@+id/pass_text2"
             android:layout_width="@dimen/box_text_login_w"
             android:layout_height="@dimen/box_text_login"
+            android:layout_marginTop="24dp"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="@+id/imageView3"
-            app:layout_constraintStart_toStartOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintEnd_toEndOf="@+id/user_text2"
+            app:layout_constraintStart_toStartOf="@+id/user_text2"
+            app:layout_constraintTop_toBottomOf="@+id/user_text2" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="244dp"
             android:layout_height="177dp"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="76dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.120000005"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/car" />
+
+        <TextView
+            android:id="@+id/text_error"
+            android:layout_width="291dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="23dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="username or password not match"
+            android:textAlignment="center"
+            android:textColor="#F30C0C"
+            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
+            app:layout_constraintStart_toStartOf="@+id/btnLogin"
+            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
